<resources>
    <string name="app_name">VynilsAppEquipo10</string>

    <!-- Album Detail -->
    <string name="album_detail_title">Detalle del Álbum</string>
    <string name="album_detail_retry">Reintentar</string>
    <string name="album_detail_add_comment">Agregar Comentario</string>
    <string name="album_detail_description">Descripción</string>
    <string name="album_detail_tracks">Canciones</string>
    <string name="album_detail_performers">Artistas</string>
    <string name="album_detail_comments">Comentarios</string>
...
