...
                colors = ButtonDefaults.buttonColors(
                    containerColor = ColorSurface,
                    contentColor = Color.White
                )
            ) {
                Text(
                    text = "EXPLORAR COMO VISITANTE",
                    fontSize = 13.sp,
                    fontWeight = FontWeight.SemiBold,
                    letterSpacing = 0.8.sp
                )
            }

...
